<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".activity.LoginActivity">


    <EditText
        android:id="@+id/usernameLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="220dp"
        android:layout_marginRight="20dp"
        android:padding="6dp"
        android:inputType="phone"
        android:maxLength="10"
        android:minLines="1"
        android:hint="@string/edittext_hint_phone"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@android:color/transparent"
        />


    <EditText
        android:id="@+id/passwordLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="290dp"
        android:layout_marginRight="20dp"
        android:hint="@string/edittext_hint_password"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:background="@android:color/transparent"/>


    <Button
        android:id="@+id/btnLog"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="440dp"
        android:background="@drawable/oval2"
        android:text="Login"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/newuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLog"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="95dp"
        android:layout_marginRight="95dp"
        android:background="@android:color/transparent"
        android:hint="@string/newuser"
        android:padding="6dp"
        android:textColorHint="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/newusersignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newuser"
        android:layout_alignBottom="@+id/newuser"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-31dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="-1dp"
        android:background="@android:color/transparent"
        android:hint="@string/signinnow"
        android:padding="6dp"
        android:textColorHint="@color/purple"
        android:textStyle="bold" />


</RelativeLayout>