<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="@drawable/signup"
    tools:context=".fragment.SignUpFragment">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:text="Name"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/oval"
        android:hint="@string/edittext_hint_namesign"
        android:inputType="text"
        android:minLines="1"
        android:padding="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="@color/button_selectorcolor" />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/name"
        android:background="@android:color/transparent"
        android:text="Email ID"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/emailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/oval"
        android:hint="@string/edittext_hint_emailsign"
        android:inputType="textEmailAddress"
        android:maxLength="30"
        android:minLines="1"
        android:padding="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"

        android:textColorHint="@color/button_selectorcolor" />
    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/emailId"
        android:background="@android:color/transparent"
        android:text="Password"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passwordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailId"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/oval"
        android:hint="@string/edittext_hint_password"
        android:inputType="textPassword"
        android:maxLength="50"
        android:minLines="1"
        android:padding="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorHint="@color/button_selectorcolor" />
    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_below="@id/passwordEmail"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:text="Phone Number"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEmail"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/oval"
        android:hint="@string/edittext_hint_phone"
        android:inputType="phone"
        android:maxLength="10"
        android:minLines="1"
        android:padding="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHint="@color/button_selectorcolor" />
    <TextView
        android:id="@+id/tvUserType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/phoneNumber"
        android:background="@android:color/transparent"
        android:text="You Are Signing As"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/signingUpAsUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumber"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/oval"
        android:hint="@string/signinas"
        android:inputType="text"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorHint="@color/button_selectorcolor" />
    <TextView
        android:id="@+id/address1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/signingUpAsUser"
        android:background="@android:color/transparent"
        android:text="Address"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/address2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address1"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/oval"
        android:hint="Enter Your Complete Address"
        android:inputType="text"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorHint="@color/button_selectorcolor" />

    <Button
        android:id="@+id/signin"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/address2"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="177dp"
        android:background="@drawable/oval2"
        android:text="Sign Up"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="267dp"
        android:layout_marginRight="267dp"
        android:layout_marginBottom="286dp"
        android:background="@android:color/transparent"
        android:text="City/District"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/address3"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="219dp"
        android:layout_marginRight="219dp"
        android:layout_marginBottom="248dp"
        android:background="@drawable/oval"
        android:hint="City/District"
        android:inputType="text"
        android:padding="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorHint="@color/button_selectorcolor" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="139dp"
        android:layout_marginRight="139dp"
        android:layout_marginBottom="290dp"
        android:background="@android:color/transparent"
        android:text="State"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/address4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="251dp"
        android:background="@drawable/oval"
        android:hint="State"
        android:inputType="text"
        android:padding="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorHint="@color/button_selectorcolor" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="292dp"
        android:layout_marginRight="292dp"
        android:layout_marginBottom="218dp"
        android:text="Country"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/address5"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="218dp"
        android:layout_marginRight="218dp"
        android:layout_marginBottom="181dp"
        android:background="@drawable/oval"
        android:ems="10"
        android:hint="Country"
        android:inputType="text"
        android:padding="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorHint="@color/button_selectorcolor" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:layout_marginBottom="215dp"
        android:text="Pincode"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/address6"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="178dp"
        android:background="@drawable/oval"
        android:ems="10"
        android:hint="Pincode"
        android:inputType="number"
        android:maxLength="6"
        android:padding="6dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColorHint="@color/button_selectorcolor" />


</RelativeLayout>